Refactor frontend Docker setup and configuration, update port mapping

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     build:
       context: ./frontend
     ports:
-      - '3000:3000'
-    environment:
-      - NODE_ENV=production
+      - '8400:3000'
+    # environment:
+    #   - NODE_ENV=production
     # depends_on:
     #   - backend
     networks:
