--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,25 +1,18 @@
-# frontend/Dockerfile
+FROM oven/bun
 
-# Use the official Bun image
-FROM oven/bun:latest
-
-# Set the working directory
 WORKDIR /app
 
-# Copy package.json and bun.lockb
+# Install dependencies
 COPY package.json bun.lockb ./
+RUN bun install --frozen-lockfile
 
-# Install dependencies using Bun
-RUN bun install
-
-# Copy the rest of the application code
+# Rebuild the source code only when needed
+WORKDIR /app
 COPY . .
 
-# Build the Next.js application
+
 RUN bun run build
 
-# Expose the port the app runs on
 EXPOSE 3000
 
-# Start the Next.js app
 CMD ["bun", "run", "start"]
